Fix upgrade/downgrade backup/restore of master-slave replication with UUIDs

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 3.5.11
    • Affects Version/s: None
    • Component/s: Replication, Storage
    • None
    • Fully Compatible
    • ALL
    • Storage 2017-07-31
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The following tests fail with collectionUUIDs enabled:

      • 3_upgrade_replset.js
      • downgrade_replset.js
      • dumprestore.js
      • dumprestore_sharded.js
      • major_version_upgrade.js
      • minor_version_tags_old_new_old.js

            Assignee:
            Geert Bosch
            Reporter:
            Geert Bosch
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: