SERVER-30036 Make m/s replication work with collection UUIDs